After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 661683 - Seahorse crashes when trying to add non-LDAP keyserver
Seahorse crashes when trying to add non-LDAP keyserver
Status: RESOLVED FIXED
Product: seahorse
Classification: Applications
Component: general
3.1.x
Other Linux
: Normal normal
: ---
Assigned To: Seahorse Maintainer
Seahorse Maintainer
: 668061 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2011-10-13 16:37 UTC by Vincent Untz
Modified: 2012-02-28 20:44 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix crash when adding a non-LDAP keyserver (1.45 KB, patch)
2011-10-13 17:09 UTC, Vincent Untz
none Details | Review

Description Vincent Untz 2011-10-13 16:37:03 UTC
Forwarding https://bugzilla.novell.com/show_bug.cgi?id=723908

When selecting user-defined type of keyserver in settings dialog, seahorse
crashes.

$ LANG=C seahorse
** Message: DNS-SD initialization failed: Daemon not running
** Message: init gpgme version 1.3.1

(seahorse:12166): GLib-GObject-CRITICAL **: Property 'icon' on class
'SeahorsePkcs11Certificate' has type 'gchararray' which is different from the
type 'GIcon', of the property on interface 'GcrCertificateIface'

Speicherzugriffsfehler


Steps to reproduce:
1. Launch Seahorse
2. Edit > Preferences
3. Add
4. Select "Custom"

Expected behavior:
No crash, instead entry of keyserver address.
Comment 1 Vincent Untz 2011-10-13 17:00:06 UTC
Stack trace:

Program received signal SIGSEGV, Segmentation fault.
0x0807a8fe in calculate_keyserver_uri (swidget=0x85bdc40) at seahorse-prefs.c:248
248                     if (scheme && !scheme[0])
(gdb) bt
  • #0 calculate_keyserver_uri
    at seahorse-prefs.c line 248
  • #1 on_prefs_add_keyserver_uri_changed
    at seahorse-prefs.c line 296
  • #2 g_cclosure_marshal_VOID__VOID
    at gmarshal.c line 85
  • #3 g_closure_invoke
    at gclosure.c line 774
  • #4 signal_emit_unlocked_R
    at gsignal.c line 3272
  • #5 g_signal_emit_valist
    at gsignal.c line 3003
  • #6 g_signal_emit
    at gsignal.c line 3060
  • #7 gtk_combo_box_set_active_internal
    at gtkcombobox.c line 4290
  • #8 gtk_combo_box_set_active_iter
    at gtkcombobox.c line 4348
  • #9 gtk_combo_box_menu_activate
    at gtkcombobox.c line 3195
  • #10 g_cclosure_marshal_VOID__STRING
    at gmarshal.c line 504
  • #11 g_closure_invoke
    at gclosure.c line 774
  • #12 signal_emit_unlocked_R
    at gsignal.c line 3272
  • #13 g_signal_emit_valist
    at gsignal.c line 3003
  • #14 g_signal_emit
    at gsignal.c line 3060
  • #15 item_activated_cb
    at gtktreemenu.c line 1466
  • #16 g_cclosure_marshal_VOID__VOID
    at gmarshal.c line 85
  • #17 g_closure_invoke
    at gclosure.c line 774
  • #18 signal_emit_unlocked_R
    at gsignal.c line 3272
  • #19 g_signal_emit_valist
    at gsignal.c line 3003
  • #20 g_signal_emit
    at gsignal.c line 3060
  • #21 gtk_widget_activate
    at gtkwidget.c line 6163

Comment 2 Vincent Untz 2011-10-13 17:09:08 UTC
Created attachment 198958 [details] [review]
Fix crash when adding a non-LDAP keyserver
Comment 3 Vincent Untz 2011-10-13 17:24:18 UTC
Just to clarify: the code assumes the types are in a list, while they're in a array.
Comment 4 Stef Walter 2011-11-14 07:00:40 UTC
Thanks! Merged to gnome-3-2 branch.
Comment 5 Stef Walter 2012-02-28 20:44:43 UTC
*** Bug 668061 has been marked as a duplicate of this bug. ***