Fix crash when adding a non-LDAP keyserver

https://bugzilla.gnome.org/show_bug.cgi?id=661683